# AI-Jobs

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt  start  tailwind.config.js
alerts/: admin.py  models.py  urls.py  views.py
alerts/migrations/: 0001_initial.py
app/: urls.py  views.py
app/templates/app/: base.html  companies_leads.html  index.html
back/: .gitignore  Dockerfile  pyproject.toml  start
back/config/settings/: base.py  prod.py
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
core/: settings.py  urls.py
jstoolchain/: package-lock.json  package.json  tailwind.config.js
static/css/: daisyui.min.css  general.css  output.css
static/src/: output.css
staticfiles/: staticfiles.json
users/migrations/: 0001_initial.py
