[tool.poetry]
name = "back"
version = "0.1.0"
description = "Backend for ai jobs project"
authors = ["saul <luckly083@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-environ = "^0.11.2"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
